fix: mobile navbar image and page jumping on scroll

--- a/client/public/css/template.css
+++ b/client/public/css/template.css
@@ -10,6 +10,10 @@
     --color-code-bg: #c7c7c7;
     --site-width: 1100px;
     --logo: url("/public/img/Improtheater-Frankfurt-Logo.png");
+
+    --menu-height: 80px;
+    --menu-scrolled-height: 65px;
+    --menu-top-padding: 8px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -47,8 +51,12 @@ body {
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    left: 0px;
+    padding-top: var(--menu-top-padding);
     width: 100%;
-    height: 80px;
+    height: var(--menu-height);
     z-index: 10;
     transition: height .3s ease-out;
     margin-bottom: 5px;
@@ -56,11 +64,7 @@ nav {
 }
 
 .nav-sticky {
-    position: fixed;
-    top: 0;
-    left: 0px;
-    height: 65px;
-    padding-top: 8px;
+    height: var(--menu-scrolled-height);
     box-shadow: #00000020 0 1px 3px;
 }
 
@@ -152,15 +156,15 @@ nav #main-menu .active {
         float: none;
         display: none;
         background-color: var(--color-bg);
-        padding-top: 80px;
+        padding-top: var(--menu-height);
     }
 
     .nav-sticky #main-menu {
-        padding-top: 65px;
+        padding-top: var(--menu-scrolled-height);
     }
 
     .nav-sticky #logo {
-        height: 65px;
+        height: var(--menu-scrolled-height);
     }
 
     nav #menu #main-menu a {
@@ -193,6 +197,7 @@ nav #main-menu .active {
 #wrapper {
     position: relative;
     width: 100%;
+    margin-top: calc(var(--menu-height) + var(--menu-top-padding));
 }
 
 #wrapper .container {
